# madsterm

./: .gitignore  .prettierignore  CLAUDE.md  README.md  biome.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  pty_manager.rs
src-tauri/src/commands/: fs_commands.rs  git_commands.rs  mod.rs  pty_commands.rs
src-tauri/src/commands/fs/: mod.rs  search.rs  tree.rs  utils.rs
src/commands/: fs.ts  git.ts
src/commands/__tests__/: fs.test.ts  git.test.ts  pty.test.ts
src/components/diff/: DiffFileList.tsx  DiffFileSection.tsx  DiffPanel.tsx  DiffViewer.tsx  highlightCode.ts
src/components/explorer/: FileExplorer.tsx  FileTree.tsx  FileTreeItem.tsx  SearchMatchHighlight.tsx  SearchResultsPanel.tsx  ToolbarButton.tsx
src/components/layout/: AboutDialog.tsx  SettingsPanel.tsx  StatusBar.tsx  TabBar.tsx  ThemePicker.tsx
src/components/terminal/: SearchBar.tsx  TerminalInstance.tsx  keyHandler.ts  (+3 more)
src/hooks/: useContentSearch.ts  useDirectoryLoader.ts  useFileExplorer.ts  useGitDiff.ts  useGitPolling.ts  useKeyboardShortcuts.ts  usePty.ts  useVimListNavigation.ts
src/stores/: contentSearchStore.ts  diffStore.ts  fileExplorerStore.ts  notificationStore.ts  panelStore.ts  settingsStore.ts  tabStore.ts  themeStore.ts
src/test/: setup.ts
src/theme/: colors.ts  themes.ts
src/types/: index.ts
(+12 files in other folders)
