[package]
name = "madsterm"
version = "0.2.0"
description = "A Warp-style terminal emulator"
authors = ["you"]
edition = "2021"

[lib]
name = "madsterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
git2 = "0.19"
walkdir = "2"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
regex = "1"

[dev-dependencies]
tempfile = "3"
